fix spacing issues with logo in footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -261,8 +261,10 @@ body {
       display: block;
       position: relative;
       top: 0.5rem;
+      left: 1rem;
       width: 200px;
       height: 200px;
+      margin-right: 1rem;
       overflow: hidden;
       background: url("./images/bountifulbasementlogo.png") no-repeat;
       background-size: 175% 175%;
